@@ -11,6 +11,7 @@
 
 - Use libtool instead of ar for Mac OS X Universal static libraries
 - Fixed Xbox 360 linker settings in Visual Studio
+- Remove platform-specific intermediate objects on clean
 - Bug 2819232: Buildoptions not used when creating Makefile for C#
 - Bug 2813297: OS X universal config should be "univ" (William Burnson)
 - Bug 2814179: Xbox 360 precompiled headers not working
